<resources>
    <string name="app_name">Listify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My Lists</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_stores">Stores</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="app_label">Listify</string>
    <string name="search_hint">Search Test</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="item_image_desc">Product Image</string>
    <string name="sort_button_desc">Sort Icon</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="backButton">Back Button</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_button_desc">Search Button</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="store_selection">Store selection</string>
    <string name="title_activity_item_details">ItemDetails</string>
    <string name="add_to_list">Add to list</string>
    <string name="create_new_list">Add to new list</string>
    <string name="default_product_name">Product Name</string>
    <string name="default_store">Store</string>
    <string name="default__00_00">$00.00</string>
    <string name="default_description">Description</string>
    <string name="product_image_description">Product Image</string>
    <string name="add_item_to_list">Add item to List</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="new_list_name">New list name</string>
</resources>