<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetails">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >

            <ImageButton
                android:id="@+id/back_to_search_results_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/abc_vector_test"
                android:background="@null"
                android:contentDescription="@string/backButton"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_item_details" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lin_add_item"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="22dp">

        <TextView
            android:id="@+id/add_item_to_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_list"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="5dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/ic_baseline_post_add_28" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lin_create_list"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="22dp">

        <TextView
            android:id="@+id/create_new_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_list"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="5dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/ic_baseline_create_28" />

    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_baseline_add_28" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>